<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_back"
    tools:context=".ui.StartFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layBack"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/grey_et_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topBoard"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layBack" />

    <ImageView
        android:id="@+id/im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hoz_mag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBoard"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_title"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im" />

    <Button
        android:id="@+id/btnEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/blue"
        android:text="@string/entry"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/reg_title"
        android:textColor="@color/black_transparent"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/btnEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="@color/black_transparent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEntry" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr" />

    <View
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black_transparent"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintEnd_toStartOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr" />

    <View
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/black_transparent"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintStart_toEndOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr" />


</androidx.constraintlayout.widget.ConstraintLayout>